@@ -13,26 +13,22 @@ module Sequel
     TYPE_TRANSLATOR = tt = Class.new do
       FALSE_VALUES = %w'0 false f no n'.freeze
       def boolean(s) !FALSE_VALUES.include?(s.downcase) end
-      def blob(s) ::Sequel::SQL::Blob.new(s) end
       def integer(s) s.to_i end
       def float(s) s.to_f end
       def numeric(s) ::BigDecimal.new(s) rescue s end
-      def date(s) ::Sequel.string_to_date(s) end
-      def time(s) ::Sequel.string_to_time(s) end
-      def timestamp(s) ::Sequel.database_to_application_timestamp(s) end
     end.new
 
     # Hash with string keys and callable values for converting SQLite types.
     SQLITE_TYPES = {}
     {
-      %w'timestamp datetime' => tt.method(:timestamp),
-      %w'date' => tt.method(:date),
-      %w'time' => tt.method(:time),
+      %w'timestamp datetime' => ::Sequel.method(:database_to_application_timestamp),
+      %w'date' => ::Sequel.method(:string_to_date),
+      %w'time' => ::Sequel.method(:string_to_time),
       %w'bit bool boolean' => tt.method(:boolean),
       %w'integer smallint mediumint int bigint' => tt.method(:integer),
       %w'numeric decimal money' => tt.method(:numeric),
       %w'float double real dec fixed' + ['double precision'] => tt.method(:float),
-      %w'blob' => tt.method(:blob)
+      %w'blob' => ::Sequel::SQL::Blob.method(:new)
     }.each do |k,v|
       k.each{|n| SQLITE_TYPES[n] = v}
     end
